# aoc25

./: flake.nix
01/: aoc.cabal
01/src/: AOC.hs
01/test/: Main.hs
02/: aoc.cabal
02/src/: AOC.hs
02/test/: Main.hs
03/: aoc.cabal
03/src/: AOC.hs
03/test/: Main.hs
04/src/: AOC.hs
04/test/: Main.hs
05/: .ghci
05/src/: AOC.hs
05/test/: Main.hs
06/: aoc.cabal
06/app/: Main.hs
06/src/: AOC.hs
06/test/: Main.hs
